# oai-srt-translator

./: README.md  pyproject.toml
gemini_srt_translator/: __init__.py  cli.py  main.py
srt_translator/: __init__.py  cli.py  helpers.py  main.py
tests/: test_batch_translate.py  test_listmodels.py  test_translate.py  test_translate_alloptions.py  test_translate_alloptions_draganddrop.py
